# mova-cli

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PRD_starting.md  README.md  RELEASING.md  ROADMAP.md  USER_GUIDE.md  chainlit.md  hatch_build.py  movate.yaml  pyproject.toml  roadmap.yaml  shipped.jsonl  voice-bench-baseline.json
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: acceptance.yml  agents.yml  ci.yml  daily-changelog.yml  deploy.yml  e2e-smoke.yml  eval-gate.example.yml  mvp-smoke.yml  release-version.yml  temporal-live.yml  validate.yml
.movate/case-reasoner/: baseline.json
.movate/faq-agent/: baseline.json
agents/deva-test2/: agent.yaml  prompt.md
agents/faq-agent/: agent.yaml  prompt.md
agents/manager/: agent.yaml
agents/voice-receptionist/: agent.yaml  prompt.md
appPackage/: README.md
certification/: README.md  run_suite.py
certification/harness/: asserts.py  cert_metrics.py  driver.py  sim_systems.py
dashboards/: README.md  import-azure-grafana.sh
dashboards/azure/: mdk-golden-signals.workbook.json
dashboards/grafana/: README.md  mdk-business-of-record.json  mdk-certification-matrix.json  mdk-certification.json  mdk-cost.json  mdk-dead-letter.json  mdk-exec-summary.json  mdk-golden-signals.json  mdk-governance.json  mdk-queue-and-pool.json  mdk-runtime-overview.json  mdk-unified-observability.json
dashboards/prometheus/: mdk-rules.yaml
docs/: agent-layout.md  alerting.md  architecture-principles.md  architecture-review.md  azure-bootstrap.md  azure-credentials-setup.md  azure-monitor-workbooks.md  azure-movate-architecture.md  azure-movate-migration-runbook.md  ci-eval-gate.md  cli-reference.md  core-path-polish.md  daily-changelog.md  demo-end-to-end.md  demo-faq-runbook.md  demo-monday-runbook.md  demo-runbook.md  dev-loop.md  dev-setup.md  deva-endpoint-smoke-guide.md  deva-pillar-walkthrough.md  events-stream.md  faq.md  friday-demo-smoke.md  front-end-api.md  graph-app-deploy.md  graph-dashboard-hosting.md  implementation-tracker.md  langgraph-seam.md  license-posture.md  livekit-browser-voice.md  livekit-integration-roadmap.md  llm-init.md  migrate-from-lyzr.md  mova-io-mapping.md  movate-cli-demo-deck.pptx  movate-cli-exec-deck.pptx  movate-telemetry-onboarding.md  mvp-workflow.md  observability-deploy.md  (+15 more)
docs/adr/: 001-cloud-portability.md  002-skills-and-contexts.md  003-teams-integration.md  008-workflow-level-evals.md  009-pgvector-kb-storage.md  010-graphrag.md  011-mdk-project-state-dir.md  012-runtime-auth-resilience.md  013-end-to-end-identity.md  014-durable-agent-registry.md  015-self-hosted-observability.md  016-continuous-improvement-loop.md  017-agent-orchestration.md  018-tenant-provider-keys.md  019-trace-context-propagation.md  020-otel-collector-azure-monitor.md  021-version-free-iterate.md  022-runtime-key-precedence.md  023-auto-retrieval.md  024-step-observability.md  025-authoring-copilot.md  026-init-front-door-ux.md  027-dev-live-reload-loop.md  028-template-discoverability-workflow-starter.md  029-workflow-authoring.md  030-langgraph-execution-backend.md  031-reporting-and-dashboards.md  032-front-end-api-completion.md  033-api-hardening.md  034-data-plane-scalability.md  035-outbound-events-webhooks.md  036-usage-metering-quotas.md  037-workflow-api-parity.md  038-governable-agent-pattern-library.md  039-movate-product-telemetry.md  040-projects-cloud-entity.md  041-agent-catalog.md  042-bundle-composer.md  043-self-improving-agent-loop.md  (+62 more)
infra/azure/: README.md  (+4 more)
mova-voice-livekit-playground/: Dockerfile  README.md  deploy.sh  index.html  server.py
mova-voice-playground/: Dockerfile  README.md  deploy.sh  recording.py  server.py
postman/: CHEATSHEET.md  CLI-VOICE-DEMO.md  CLI-VOICE-FAQ-DEMO.md  DEMO-SCENARIO-E2E.md  E2E-DEMO-FLOW.md  POSTMAN-DEMO-GUIDE.md  POSTMAN-TALK-TRACK.md  QUICK-DEMO-TONIGHT.md  README.md  mdk-quick-demo.postman_collection.json  mdk-quick-demo.postman_environment.json  movate-azure.postman_environment.json  movate-core-flow.postman_collection.json  movate-core-flow.postman_collection.json.bak  movate-local.postman_environment.json  movate.postman_environment.json  sample-faq.md
scripts/: acceptance_e2e.sh  azure-bootstrap.sh  build-azure-summary-ppt.py  build-deva-ppt.py  build-mova-io-mapping-ppt.py  build_demo_deck.py  build_exec_deck.py  bump_version.py  calver_version.py  check_licenses.py  deploy-temporal.sh  deploy_voice_demo_azure.sh  export_openapi.py  friday-demo-deploy.sh  gen_cli_reference.py  gen_daily_changelog.py  gen_exec_dashboard.py  gen_kb_fixtures.py  gen_live_runtime_dashboard.py  gen_roadmap.py  gen_temporal_dashboard.py  import-movate-dashboards.sh  install-hooks.sh  langgraph_prototype.py  list-endpoints.py  loadtest.py  setup_voice_demo_custom_domain.sh  setup_voice_demo_github_oidc.sh  smoke.sh  temporal-e2e-smoke.sh  temporal-preflight.sh  voice_bench.py
tests/: conftest.py  test_adaptive_endpointing.py  test_add_bundle_c.py  test_add_cmd.py  test_add_menu_and_deploy_401_polish.py  test_add_next_step_menu_and_yaml_deploy.py  test_add_picker_multi_select.py  test_adr060_d4_registry_resolution.py  test_agent_knowledge_wiring.py  test_agent_metadata_extension.py  test_agent_registry_resolve.py  test_agent_registry_storage.py  test_agent_runtime_state.py  test_agent_skill.py  test_alert_routing.py  test_alert_sources.py  test_anthropic_provider.py  test_api_hardening_middleware.py  test_apikey_durability.py  test_audit.py  test_audit_storage.py  test_audit_telemetry.py  test_audit_v2_scanners.py  test_audit_v3_scanners.py  test_auditor_core.py  test_auth.py  test_auth_401_recovery.py  test_auth_bootstrap_seed.py  test_auth_picker_marker.py  test_auth_pull_runtime_key.py  test_auth_refresh_runtime_key.py  test_auth_rotation.py  test_auth_scopes.py  test_auth_status_runtime_targets.py  test_authoring_audit_replay.py  test_authoring_autopilot.py  test_authoring_catalog.py  test_authoring_cli.py  test_authoring_copilot.py  test_authoring_cost_budget.py  (+575 more)
(+1884 files in other folders)
