[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movate-cli"
version = "2026.5.22.41"
description = "movate — declarative platform for building, evaluating, and deploying AI agents"
authors = [{ name = "Movate", email = "engineering@movate.com" }]
license = { text = "Proprietary" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "litellm>=1.50,<2",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "structlog>=24.1",
    "jsonschema>=4.21",
    # PDF text extraction for KB ingest. Pure-Python, ~250KB on disk,
    # no system-level dependencies. Handles text-based PDFs (NOT
    # scanned-image PDFs — that needs OCR, deferred to a separate
    # extras flag). Listed as a core dep rather than a [pdf] extra
    # because the alternative — "drag a PDF into Chainlit, get a
    # cryptic ImportError" — is bad UX for the operator's first
    # encounter with the KB upload flow.
    "pypdf>=4.0,<6",
    # AES-encrypted PDF support for KB ingest. Many real-world PDFs
    # (manufacturer user guides, DRM-protected documents, corporate
    # exports) are encrypted with AES-256. pypdf can read the PDF
    # structure but silently fails to extract text without the
    # cryptography package — producing the misleading "skipped"
    # warning operators saw on e.g. SanDisk user guide PDFs.
    # cryptography is ~2MB on disk, pure-Python for the AES path,
    # and has no system binary dependencies.
    "cryptography>=3.1",
    # DOCX text extraction for KB ingest (PR-L). Same rationale as
    # pypdf above — making this a core dep avoids the "drag a .docx,
    # get ImportError" failure mode. python-docx is ~3MB on disk
    # (with its lxml dep) — larger than pypdf but still well within
    # budget for a CLI install. Handles standard Word documents;
    # malformed / very old .doc (binary) files are rejected with a
    # clean None at the parser layer.
    "python-docx>=1.1,<2",
    # HTML main-content extraction for KB ingest (PR-M). The naive
    # approach — strip all tags + return the text — keeps too much
    # nav / sidebar / ad noise. readability-lxml runs Mozilla's
    # Readability algorithm against the DOM and extracts just the
    # main-article body (the same heuristic that powers browser
    # "Reader View"). Critical for Confluence / Notion / blog
    # exports which carry heavy chrome around the actual content.
    # ~30KB; depends on lxml which is already transitive via
    # python-docx. Strip-tags fallback at the parser layer when
    # readability can't find a main-content block.
    "readability-lxml>=0.8,<1",
    # BeautifulSoup4 is the strip-tags fallback after readability
    # extracts the main-content HTML. Together they cover the
    # "messy HTML → plain text" round-trip. ~250KB; same lxml dep.
    "beautifulsoup4>=4.12,<5",
    # OCR Python bindings for image files (PNG / JPG / TIFF) in the KB.
    # pytesseract wraps the system Tesseract binary; Pillow decodes the
    # raw bytes into PIL Image objects. Both are listed as core deps —
    # same rationale as pypdf: silently skipping image files on first
    # `mdk kb ingest` is far worse UX than a slightly larger install.
    # The Python packages install cleanly even when the Tesseract binary
    # is absent; `mdk kb ingest` detects the missing binary and prints
    # an actionable `brew install tesseract` message at that point.
    # pdf2image (for scanned PDF pages) stays in the [ocr] extra because
    # it requires Poppler — a heavier system dependency than Tesseract.
    "pytesseract>=0.3,<1",
    "pillow>=10.0",
]

[project.optional-dependencies]
runtime = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",
    # pgvector ships `pgvector.asyncpg.register_vector` so asyncpg round-trips
    # Python lists ↔ Postgres `vector(N)` natively. Durable vector store for
    # KB embeddings on Azure Postgres (replaces brute-force Python cosine over
    # JSONB). See docs/adr/009-pgvector-kb-storage.md.
    "pgvector>=0.3",
    "bcrypt>=4.0",
    # python-multipart is FastAPI's required dep for parsing
    # multipart/form-data uploads. Used by POST /api/v1/agents
    # (item 76) for the canonical-bundle creation flow. FastAPI
    # doesn't pull it in transitively — it's an explicit extra.
    "python-multipart>=0.0.9",
]
langfuse = ["langfuse>=2.30,<3"]
cross-encoder = [
    # Local cross-encoder reranker (PR-BB). sentence-transformers pulls
    # in torch-cpu (~300MB) + huggingface-hub + tokenizers. The model
    # weights are downloaded from HuggingFace on first use (~67MB for
    # the default cross-encoder/ms-marco-MiniLM-L-6-v2). Opt-in only
    # so the vast majority of operators don't pay the disk/memory cost.
    "sentence-transformers>=2.7,<4",
]
ocr = [
    # Scanned-image PDF support: pdf2image wraps Poppler's pdftoppm
    # renderer to rasterise each PDF page at 300 DPI before passing to
    # Tesseract. Requires the Poppler system binary:
    #   macOS: brew install poppler
    #   Linux: apt-get install poppler-utils
    # pytesseract and Pillow are now core deps (see [project.dependencies])
    # so this extra only adds the pdf2image rasteriser for the scanned-PDF
    # path. Standalone image files (PNG/JPG/TIFF) work out-of-the-box.
    "pdf2image>=1.17,<2",
]
easyocr = [
    # EasyOCR backend for scanned-image PDFs — alternative to the [ocr]
    # extra when accuracy on noisy / low-contrast / handwritten scans
    # matters more than install size. EasyOCR is pure Python with no
    # system binary dependency (unlike Tesseract), but pulls in
    # torch-cpu (~300 MB) + huggingface-hub for model weight downloads.
    # Model weights (~67 MB for English) are fetched from HuggingFace
    # on first use and cached in ~/.EasyOCR.
    #
    # Select this backend at runtime via: MOVATE_OCR_BACKEND=easyocr
    # (default is "tesseract" — install [ocr] for the default path).
    #
    # pdf2image is still required to rasterise PDF pages before EasyOCR
    # can process them; Poppler must be installed as a system binary
    # (same as the [ocr] extra).
    "easyocr>=1.7,<2",
    "pdf2image>=1.17,<2",
]
otel = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-jsonschema",
]
anthropic = [
    "anthropic>=0.40,<1",
]
openai = [
    "openai>=1.40,<2",
]
langchain = [
    "langchain-core>=0.3,<1",
]
teams = [
    # The Teams bot is a FastAPI app, so it leans on the same web deps
    # `mdk serve` uses. Listed explicitly (rather than depending on
    # the `runtime` extra) so an operator who runs *just* the bot pod
    # (pointed at a remote runtime) only installs what they need.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # Encrypts per-user Movate API keys at rest (3.1.c). Fernet is the
    # symmetric primitive; the operator supplies the key via
    # MOVATE_TEAMS_ENCRYPTION_KEY env. A KMS-backed alternative can
    # later swap in behind the same interface — cryptography dep is
    # the floor.
    "cryptography>=42",
    # JWT validation for inbound Bot Framework requests lands in a
    # later hardening PR; its dep slot goes here so the optional
    # install stays single-step.
]
github = [
    # GitHub App auth (RS256-signed JWTs) needs the cryptography library
    # to load the App's RSA private key + sign installation-token
    # requests. ``cryptography`` is already in the teams extra; listing
    # it here too keeps the github extra self-contained — operators
    # running JUST the runtime + github integration (no Teams) only
    # install what they need.
    "cryptography>=42",
]
playground = [
    # Chainlit gives us a Python-native chat/form UI for testing
    # deployed agents from a browser. Operators run
    # ``mdk playground serve --runtime-url ...`` to launch it; the
    # UI renders an input form per agent (from agent.yaml's input
    # schema), POSTs to the runtime's /run endpoint, and captures
    # 👍/👎/comment feedback that the runtime persists to Postgres.
    #
    # Version range deliberately loose (>=1.3): Chainlit pulls in
    # specific FastAPI / starlette pins that conflict with the
    # [teams] extra at narrower ranges. Operators installing the
    # playground typically install JUST playground (not with teams)
    # — pin tighter only if the floor version surfaces breakage.
    "chainlit>=1.3",
    # httpx is the async HTTP client used to call the runtime API.
    # It's already a transitive dep via FastAPI on the runtime side,
    # but operators running JUST the playground (no runtime) need it
    # explicitly listed.
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-jsonschema",
    "build>=1.5.0",
    "twine>=6.2.0",
]

[project.scripts]
# `movate` and `mdk` are both registered — identical entrypoints into the
# same Typer app. `mdk` is the canonical name going forward (Movate
# Development Kit); `movate` stays as a transitional alias so existing
# installs, scripts, CI configs, shell aliases, and muscle memory keep
# working. The legacy `movate` script ships through v1.0+ as a deprecated
# alias and is dropped in a later major release after a full deprecation
# cycle — until then both are first-class.
movate = "movate.cli.main:app"
mdk = "movate.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/movate"]
# Note: ``packages`` already includes every file under ``src/movate/`` (data
# and Python alike) because each subdir we ship has an ``__init__.py`` that
# makes it a real package. No ``force-include`` needed — earlier versions of
# this file had one and it produced duplicate-name warnings at build time.

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "PL", "SIM"]
ignore = ["PLR0913", "PLR0915", "PLR0911"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic pattern uses function-call defaults (`typer.Option(...)`); B008 misfires there.
"src/movate/cli/*.py" = ["B008"]
# CLI process state (--quiet flag, global --target) is intentionally module-scope —
# the top-level Typer callback writes it once on startup, every command reads it. A
# class wrapper would just push the same single instance through every signature.
"src/movate/cli/_console.py" = ["B008", "PLW0603"]
# Doctor-explain prose: each CheckExplanation has operator-facing sentences
# rendered by Rich. Enforcing 100-char wrapping in the source would splatter
# awkward continuations; Rich handles terminal wrap at render time.
"src/movate/cli/_doctor_explanations.py" = ["E501"]
# FastAPI's idiomatic pattern is identical (`Depends(...)` as a default); same exemption.
"src/movate/runtime/*.py" = ["B008"]
# Compiler is naturally branch-heavy (one branch per validation rule) — splitting it
# into helpers fights readability without reducing total complexity.
"src/movate/core/workflow/compiler.py" = ["PLR0912"]
# Executor.execute is the linear pipeline (validate → render → call → validate → record)
# with branches for retries, fallback, schema errors, policy, runtime dispatch.
# Each branch is a distinct concern; folding into helpers would scatter the
# read order. PLR0912 is the wrong rule for this shape.
"src/movate/core/executor.py" = ["PLR0912"]
# Provider tests build dynamically-named exception classes
# (`PermissionDeniedError = type("PermissionDeniedError", (Exception,), {})`)
# to exercise the LiteLLM → movate error translation — N806 misfires on
# those locals. The `pytest.raises(match=...)` strings are literal expected
# error text, not regexes, so RUF043's "escape your metacharacters" is noise.
"tests/test_anthropic_provider.py" = ["N806", "RUF043"]
"tests/test_openai_native_provider.py" = ["N806", "RUF043"]
# Local imports inside a test body are intentional — they scope a heavy or
# optional dependency to the single test that needs it.
"tests/test_executor.py" = ["PLC0415"]
"tests/test_tracing_langfuse.py" = ["PLC0415"]
# _validate_agent runs the full set of pre-flight checks in a linear pipeline:
# runtime availability, project policy, prompt linter, cost forecast, then
# success rendering. Same justification as executor.py — pipeline shape doesn't
# benefit from helper extraction.
"src/movate/cli/validate.py" = ["PLR0912"]
# kb_cmd._run() is a pipeline of ingest modes (normal / changed-only / watch)
# with progress tracking and summary rendering; the branches correspond to
# distinct operator-facing behaviors, not logic that benefits from extraction.
"src/movate/cli/kb_cmd.py" = ["PLR0912"]
# add_cmd._add_one runs the full scaffolding pipeline (template copy → stamp →
# kb-dir → skills → contexts → validate) — branch count is inherent to the
# orchestration shape. PLR0912 is inappropriate here.
"src/movate/cli/add_cmd.py" = ["PLR0912"]
# eval_scorecard_cmd._render_cases_preview_table is a table-rendering pipeline:
# one branch per field type (list vs scalar), one branch per output format,
# one branch for the optional KB-seed column. Splitting would obscure the
# single-pass rendering intent. PLR0912 is wrong for this shape.
"src/movate/cli/eval_scorecard_cmd.py" = ["PLR0912"]
# Tests freely use literals in assertions, broad-catch raises, and slf-private access.
"tests/*.py" = ["PLR2004", "PLR0915", "B017", "SLF001"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/movate"]

[[tool.mypy.overrides]]
module = [
    "jsonschema.*",
    "aiosqlite.*",
    "litellm.*",
    "langfuse.*",
    "opentelemetry.*",
    "asyncpg.*",
    "pgvector.*",
    "chainlit.*",
    "readability.*",
    "bs4.*",
    # Pillow ships type stubs in a separate `types-Pillow` package; the
    # stubs don't always match the installed version and PIL is an
    # optional extra dep, so we suppress missing-import errors here.
    "PIL.*",
    # Optional OCR extras — no type stubs shipped; suppress import errors
    # so CI stays green whether or not the [ocr] / [easyocr] extras are
    # installed.
    "pdf2image.*",
    "pytesseract.*",
    "easyocr.*",
    # Optional cross-encoder reranker extra — no type stubs.
    "sentence_transformers.*",
    # Anthropic SDK — optional native-anthropic runtime extra.
    "anthropic.*",
]
ignore_missing_imports = true

# Grandfather-in: these modules carry pre-existing strict-mode mypy
# debt (missing dict/list type params, None-narrowing gaps, Any-returns)
# that accumulated while CI's lint step was failing first — mypy never
# ran, so the errors went unnoticed. Loosening to strict=false here so
# CI on main can stay green while we unbreak the auto-version-bump
# infra. Follow-up: pick these off one at a time. Don't add new modules
# without explicit owner sign-off; this list should only shrink.
[[tool.mypy.overrides]]
module = [
    "movate.audit.scanners",
    "movate.cli.auth",
    "movate.cli.costs_cmd",
    "movate.cli.explain",
    "movate.cli.export_oci_cmd",
    "movate.cli.import_openapi",
    "movate.cli.knowledge_cmd",
    "movate.cli.logs",
    "movate.cli.main",
    "movate.cli.memory_cmd",
    "movate.cli.menu_cmd",
    "movate.cli.models_cmd",
    "movate.cli.playground",
    "movate.cli.run",
    "movate.cli.simulate_cmd",
    "movate.cli.tune_cmd",
    "movate.core.skill_backend.agent",
    "movate.fmt.formatter",
    # Chainlit's decorator-heavy API has no type stubs; the playground
    # app module is a thin glue layer over those decorators. Adding to
    # the grandfather list keeps strict-mode on the rest of the
    # codebase while letting Chainlit's untyped decorators work.
    "movate.playground.app",
    "movate.knowledge.loader",
    "movate.snapshot.manifest",
    "movate.templates.calc_agent.skills.calculator.impl",
]
disable_error_code = [
    "type-arg",
    "no-untyped-def",
    "no-any-return",
    "union-attr",
    "attr-defined",
    "assignment",
    "arg-type",
    "operator",
    "unused-ignore",
    "import-untyped",
    # Chainlit's decorators are untyped (no stubs available).
    "untyped-decorator",
    # Chainlit's Message.send / AskFileMessage.send are also untyped.
    # The grandfather override above already covers the playground app,
    # but mypy strict-mode flags every `await msg.send()` call there.
    "no-untyped-call",
    # Chainlit's Action signature in newer versions tightened; cl.Action(
    # value=..., description=...) raises call-arg even though the runtime
    # accepts both. Until Chainlit ships stubs, suppress.
    "call-arg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast unit tests",
    "integration: integration tests using local mode",
    "smoke: live API smoke tests (opt-in, env-gated)",
    "postgres: tests that require a real Postgres at MOVATE_PG_TEST_URL",
    "no_preflight_stub: opts out of the eval-scorecard preflight autouse no-op",
]
addopts = "-ra --strict-markers"
